Issue #3144 - accordion in guidances and templates fixed, add contributors and download page. Changes in this PR: - accordion for guidances (in Write plan tab) sorted - accordion colour changed to -primary-background - accordion alignment for themes in template edit page changed - ‘accordion-inner’ changed to ‘accordion-body’ in remaining files (John’s request) - ‘legend-default’ class added and applied in relevant places - Contributors page alignment sorted - Download page alignment sorted (added ‘d-flex’ class, padding and changed ‘col-xs’ to ‘col-sm’) - removed example modal in Project Details page

--- a/app/assets/stylesheets/blocks/_html.scss
+++ b/app/assets/stylesheets/blocks/_html.scss
@@ -51,9 +51,9 @@ fieldset {
   }
 }
 
-legend {
+legend, .legend-default {
   border: none;
-  font-size: 14px;
+  font-size: 14px; 
   font-weight: bold;
   margin-bottom: 5px;
   text-transform: capitalize;
