--- a/app/views/guidance_groups/_show.html.erb
+++ b/app/views/guidance_groups/_show.html.erb
@@ -2,7 +2,7 @@
 <div id="guidance-<%= guidance_accordion_id %>-accordion" class="card-group" role="tablist" aria-multiselectable="true">
   <% if group.keys.length > 1 %>
     <div id="guidance-accordion-controls">
-      <div class="accordion-controls" data-parent="guidance-<%= guidance_accordion_id %>-accordion">
+      <div class="accordion-controls px-1" data-parent="guidance-<%= guidance_accordion_id %>-accordion">
         <a href="#" data-toggle-direction="show"><%= _('expand all') %></a>
         <span>|</span>
         <a href="#" data-toggle-direction="hide"><%= _('collapse all') %></a>
