--- a/app/views/org_admin/phases/_index.html.erb
+++ b/app/views/org_admin/phases/_index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <% if template_hash[:template][:phases].present? && template_hash[:template][:phases].length > 1 %>
       <div id="sections-accordion-controls">
-        <div class="accordion-controls" data-parent="phases_accordion">
+        <div class="accordion-controls px-1" data-parent="phases_accordion">
           <a href="#" data-toggle-direction="show"><%= _('expand all') %></a>
           <span>|</span>
           <a href="#" data-toggle-direction="hide"><%= _('collapse all') %></a>
