--- a/app/views/org_admin/phases/container.html.erb
+++ b/app/views/org_admin/phases/container.html.erb
@@ -41,7 +41,7 @@
                   <div class="col-sm-6">
                     <% if phase.sections.many? %>
                       <div id="sections-accordion-controls">
-                        <div class="accordion-controls"
+                        <div class="accordion-controls px-1"
                              data-parent="sections_accordion">
                           <a href="#" data-toggle-direction="show">
                             <%= _('expand all') %>
