--- a/app/assets/stylesheets/variables/_bootstrap.scss
+++ b/app/assets/stylesheets/variables/_bootstrap.scss
@@ -11,22 +11,22 @@
 // other files for individual deployments.
 
 // Forms
-$input-border-radius: 0px !default;
+$input-border-radius: 0rem !default;
 $input-group-addon-padding-x: 0.5rem !default;
 
-
 // Navbar
-$navbar-border-radius: 0px !default;
+$navbar-border-radius: 0rem !default;
+$nav-tabs-border-radius: 0rem !default;
 
 // Buttons
-$btn-border-radius-base: 0px !default;
+$btn-border-radius-base: 0rem !default;
 
 $btn-primary-color: $color-primary-text !default;
 
 $btn-default-color: $color-primary-text !default;
 
 // Panels
-$panel-border-radius: 0px !default;
+$panel-border-radius: 0rem !default;
 
 // Links
 $link-decoration: none !default;
