--- a/app/assets/stylesheets/variables/_colours.scss
+++ b/app/assets/stylesheets/variables/_colours.scss
@@ -67,9 +67,9 @@ $color-fa: $color-grey;
 $color-focus-outline: $color-blue-alice-darkest;
 
 // Accordion colors
-$color-accordion-button: $color-white;
-$color-accordion-button-icon: $color-white;
-$color-accordion-button-bg: $color-grey-darkest;
-$color-accordion-button-active-bg:  darken($color-accordion-button-bg, 10%) ;
+$color-accordion-button: $color-primary-text;
+$color-accordion-button-icon: $color-primary-text;
+$color-accordion-button-bg: $color-primary-background;
+$color-accordion-button-active-bg:  darken($color-accordion-button-bg, 30%) ;
 
 
