--- a/app/views/phases/_edit_plan_answers.html.erb
+++ b/app/views/phases/_edit_plan_answers.html.erb
@@ -5,7 +5,7 @@
         <div class="row">
           <div class="col-md-8">
             <div id="sections-accordion-controls">
-              <div class="accordion-controls" data-parent="sections-accordion">
+              <div class="accordion-controls px-1" data-parent="sections-accordion">
                 <a href="#" data-toggle-direction="show"><%= _('expand all') %></a>
                 <span>|</span>
                 <a href="#" data-toggle-direction="hide"><%= _('collapse all') %></a>
