--- a/app/views/phases/_guidances_notes.html.erb
+++ b/app/views/phases/_guidances_notes.html.erb
@@ -4,22 +4,22 @@
 <div id="plan-guidance-tab">
   <!-- Nav tabs -->
   <ul class="nav nav-pills nav-justified mb-2" role="tablist">
-      <% if guidances_active %>
-          <li class="nav-item active" role="presentation">
-              <a class="nav-link" href="#guidances-<%= question.id %>" aria-controls="guidances-<%= question.id %>" role="tab" data-toggle="pill">
-                  <%= _('Guidance') %>
-              </a>
-          </li>
-      <% end %>
-      <% if plan.present? %>
-          <li role="presentation" class="nav-item <%= 'active' if !guidances_active %>">
-              <a class="nav-link" href="#notes-<%= question.id %>" aria-controls="notes-<%= question.id %>" role="tab" data-toggle="pill">
-                  <span id="notes-title-<%= question.id %>">
-                      <%= render partial: '/notes/title', locals: { answer: answer } %>
-                  </span>
-              </a>
-          </li>
-      <% end %>
+    <% if guidances_active %>
+      <li role="presentation" class="nav-item">
+        <a class="nav-link active" href="#guidances-<%= question.id %>" aria-controls="guidances-<%= question.id %>" role="tab" data-bs-toggle="pill">
+          <%= _('Guidance') %>
+        </a>
+      </li>
+    <% end %>
+    <% if plan.present? %>
+      <li role="presentation" class="nav-item">
+        <a class="nav-link<%= 'active' if !guidances_active %>" href="#notes-<%= question.id %>" aria-controls="notes-<%= question.id %>" role="tab" data-bs-toggle="pill">
+          <span id="notes-title-<%= question.id %>">
+            <%= render partial: '/notes/title', locals: { answer: answer } %>
+          </span>
+        </a>
+      </li>
+    <% end %>
   </ul>
   <div class="tab-content">
     <% if guidances_active %>
@@ -28,12 +28,12 @@
         <ul class="nav nav-tabs" role="tablist">
           <% tablist.each_with_index do |tab, i| %>
             <% active_nav ||= tab[:name] %>
-            <li role="presentation" class="nav-item <%= active_nav == tab[:name] ? "active" : "" %>">
+            <li role="presentation" class="nav-item<%= 'active' if active_nav == tab[:name]%>">
               <a
-                data-target="<%= "#guidance_per_question_#{question.id}_#{i}" %>"
+                data-bs-target="<%= "#guidance_per_question_#{question.id}_#{i}" %>"
                 aria-controls="<%= "#guidance_per_question_#{question.id}_#{i}" %>"
                 role="tab"
-                data-toggle="tab"
+                data-bs-toggle="tab"
                 tabindex="0"
                 class="nav-link view-plan-guidance">
                 <%= tab[:name] %>
@@ -44,34 +44,33 @@
         <div class="tab-content">
           <% tablist.each_with_index do |tab, i| %>
             <div id="<%= "guidance_per_question_#{question.id}_#{i}" %>" role="tabpanel" class="tab-pane <%= active_nav == tab[:name] ? 'active' : '' %>">
-                <div class="card card-default">
-                  <div class="card-body">
-                    <% if tab[:annotations].present? %>
-                      <% tab[:annotations].each do |annotation| %>
-                        <%=
+              <div class="card card-default">
+                <div class="card-body">
+                  <% if tab[:annotations].present? %>
+                    <% tab[:annotations].each do |annotation| %>
+                      <%=
                           render partial: 'org_admin/annotations/show', locals: {
                             template: template,
                             example_answer: nil,
                             guidance: annotation,
                             for_plan: true }
                         %>
-                      <% end %>
-                      <% if tab[:groups].present? %>
-                        <hr />
-                      <% end %>
                     <% end %>
                     <% if tab[:groups].present? %>
-                      <%= render partial: 'guidance_groups/index_by_theme',
-                          locals: { question: question, guidance_groups_by_theme: tab[:groups] } %>
+                      <hr />
                     <% end %>
-                  </div>
+                  <% end %>
+                  <% if tab[:groups].present? %>
+                    <%= render partial: 'guidance_groups/index_by_theme',
+                          locals: { question: question, guidance_groups_by_theme: tab[:groups] } %>
+                  <% end %>
                 </div>
               </div>
+            </div>
           <% end %>
         </div>
       </div>
     <% end %>
-
     <% if plan.present? %>
       <div id="notes-<%= question.id %>" role="tabpanel" class="tab-pane <%= 'active' if !guidances_active %> notes">
         <%= render partial: '/notes/layout', locals: { plan: plan, question: question, answer: answer } %>
