--- a/app/views/research_outputs/_form.html.erb
+++ b/app/views/research_outputs/_form.html.erb
@@ -16,7 +16,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
         <%= f.label(:output_type_description, _("Please describe the output type"), class: "control-label") %>
       </span>
     </div>
-    <div class="col-md-12">
+    <div class="col-md-3">
       <span class="col-md-3">
         <%= f.select :output_type, options_for_select(presenter.selectable_output_types, f.object.output_type),
                      {
@@ -28,7 +28,7 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
                        data: { remote: true, url: plan_output_type_selection_path(plan), method: :get }
                      } %>
       </span>
-      <span class="col-md-5 output-type-description <%= research_output.other? ? "" : "hidden" %>">
+      <span class="col-md-3 output-type-description <%= research_output.other? ? "" : "hidden" %>">
         <%= f.text_field :output_type_description, class: "form-control",
                                                    aria: { required: research_output.other? } %>
       </span>
@@ -36,19 +36,19 @@ repository_tooltip = _("Repositories preserve, manage, and provide access to man
   </div>
 
   <div class="form-group mb-3 row">
-    <div class="col-md-12">
+    <div class="d-flex justify-content-start col-md-12">
       <span class="col-md-6">
         <%= f.label(:title, _("Title"), class: "control-label") %>
       </span>
-      <span class="col-md-6">
+      <span class="col-md-3">
         <%= f.label(:abbreviation, _("Abbreviation"), class: "control-label") %>
       </span>
     </div>
-    <div class="col-md-12">
-      <span class="col-md-6">
+    <div class="d-flex justify-content-start col-md-12">
+      <span class="col px-md-6">
         <%= f.text_field :title, class: "form-control", aria: { required: true } %>
       </span>
-      <span class="col-md-2">
+      <span class="col px-md-4">
         <%= f.text_field :abbreviation, class: "form-control", title: abbrev_tooltip,
                                         maxlength: 10, data: { toggle: "tooltip" } %>
       </span>
