fix: add userId on react component

--- a/app/views/branded/phases/edit.html.erb
+++ b/app/views/branded/phases/edit.html.erb
@@ -7,7 +7,8 @@
   <dmp-write-plan props-json='{
     "locale": "<%= locale %>",
     "planId": <%= plan.id %>,
-    "templateId": <%= template.id %>
+    "templateId": <%= template.id %>,
+    "userId": <%= @current_user.id %>
   }'/>
 <% end %>
 
