--- a/app/views/super_admin/users/edit.html.erb
+++ b/app/views/super_admin/users/edit.html.erb
@@ -75,7 +75,7 @@
     <% end %>
 
   </div>
-  <div class="col-xs-5">
+  <div class="col-sm-5">
     <div class="row">
       <h2>
         <%= _('Merge Accounts') %>
