--- a/app/views/super_admin/notifications/_form.html.erb
+++ b/app/views/super_admin/notifications/_form.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for @notification, url: url, html: { class: 'notification' } do |f| %>
   <div class="row">
-    <div class="form-group mb-3 col-xs-10">
+    <div class="form-group mb-3 col-sm-10">
       <%= f.label :title, _('Title'), class: 'control-label' %>
       <%= f.text_field :title,
           class: 'form-control',
@@ -11,7 +11,7 @@
           "aria-required": true %>
     </div>
 
-    <div class="form-group mb-3 col-xs-2">
+    <div class="form-group mb-3 col-sm-2">
       <%= f.label :level, _('Level'), class: 'control-label' %>
       <%= f.select :level,
           Notification.levels.keys.map { |l| [l.humanize, l] },
@@ -22,21 +22,21 @@
   </div>
 
   <div class="row">
-    <div class="form-group mb-3 col-xs-12">
+    <div class="form-group mb-3 col-sm-12">
       <%= f.check_box :dismissable, style: 'width: auto' %>
       <%= f.label :dismissable, _('Dismissable'), class: 'control-label' %>
     </div>
   </div>
 
   <div class="row">
-    <div class="form-group mb-3 col-xs-12">
+    <div class="form-group mb-3 col-sm-12">
       <%= f.check_box :enabled, style: 'width: auto' %>
       <%= f.label :enabled, _('Active'), class: 'control-label' %>
     </div>
   </div>
 
   <div class="row">
-    <div class="form-group mb-3 col-xs-6">
+    <div class="form-group mb-3 col-sm-6">
       <%= f.label :starts_at, _('Start'), class: 'control-label' %>
       <%= f.date_field :starts_at,
           class: 'form-control',
@@ -44,7 +44,7 @@
           min: Date.today %>
     </div>
 
-    <div class="form-group mb-3 col-xs-6">
+    <div class="form-group mb-3 col-sm-6">
       <%= f.label :expires_at, _('Expiration'), class: 'control-label' %>
       <%= f.date_field :expires_at,
         class: 'form-control',
