Issue #3144 - Buttons and 'pull-right' Changes in this PR: - replaced 'pull-right' with 'float-end' for buttons - [IMPORTANT] changed order of import statements. customised stylesheets imported after Bootstrap defaults - removed 'btn' class styling - fixed button and card

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,5 @@
 // Import locally defined variables. Load this before 'bootstrap'
-
 @use "variables";
-
-@use "blocks";
-@use "utils";
 
 // Pull in the webpacker managed copy of Bootstrap Stylesheets
 @import "../../../node_modules/bootstrap/scss/bootstrap";
@@ -39,3 +35,7 @@ $fa-font-path: '.';
 @import "../../../node_modules/bootstrap/scss/images";
 @import "../../../node_modules/bootstrap/scss/containers";
 @import "../../../node_modules/bootstrap/scss/grid";
+
+//Importing customised stylesheets after Bootstrap defaults
+@import "blocks";
+@import "utils";
