--- a/app/views/org_admin/plans/index.html.erb
+++ b/app/views/org_admin/plans/index.html.erb
@@ -41,7 +41,7 @@
                            tags: %w{ span em }),
                   org_admin_download_plans_path(format: :csv),
                   target: '_blank',
-                  class: 'btn btn-default pull-right has-new-window-popup-info' %>
+                  class: 'btn btn-default float-end has-new-window-popup-info' %>
       <% end %>
       <div class="table-responsive">
         <%= paginable_renderise(
