--- a/app/views/org_admin/templates/new.html.erb
+++ b/app/views/org_admin/templates/new.html.erb
@@ -3,7 +3,7 @@
     <h1><%= @template.id.present? ? template.title : _('New Template') %></h1>
     <%= link_to _('View all templates'),
         org_admin_templates_path,
-        class: 'btn btn-default pull-right' %>
+        class: 'btn btn-default float-end' %>
   </div>
 </div>
 
