--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -47,5 +47,5 @@
       <%= recaptcha_tags %>
     </div>
   <% end %>
-  <%= f.button(_('Create account'), class: "btn-default", type: "submit") %>
+  <%= f.button(_('Create account'), class: "btn btn-default", type: "submit") %>
 <% end %>
