--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -17,5 +17,5 @@
       &nbsp
     <% end %>
   </div>
-  <%= submit_tag(_('Search'), class: 'btn-default', style: 'margin-top: 8px;') %>
+  <%= submit_tag(_('Search'), class: 'btn btn-default', style: 'margin-top: 8px;') %>
 <% end %>
