--- a/app/views/contributors/new.html.erb
+++ b/app/views/contributors/new.html.erb
@@ -11,7 +11,7 @@
   <h2>
     <%= _("New contributor") %>
     <%= link_to _('View all contributors'), plan_contributors_path(@plan),
-                                            class: "btn btn-default pull-right" %>
+                                            class: "btn btn-default float-end" %>
   </h2>
   <div class="row">
     <div class="col-md-12">
