--- a/app/views/guidances/new_edit.html.erb
+++ b/app/views/guidances/new_edit.html.erb
@@ -14,7 +14,7 @@ end
 <div class="row">
   <div class="col-xs-12">
     <h1><%= _('Guidance') %></h1>
-    <%= link_to _('View all guidance'), admin_index_guidance_path(current_user.org_id), class: 'btn btn-default pull-right' %>
+    <%= link_to _('View all guidance'), admin_index_guidance_path(current_user.org_id), class: 'btn btn-default float-end' %>
   </div>
 </div>
 <div class="row">
