--- a/app/views/org_admin/departments/new.html.erb
+++ b/app/views/org_admin/departments/new.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1><%= _('Create a School/Department') %></h1>
-    <%= link_to _('View all departments'), departments_url, class: 'btn btn-default pull-right' %>
+    <%= link_to _('View all departments'), departments_url, class: 'btn btn-default float-end' %>
   </div>
 </div>
 
