--- a/app/views/org_admin/templates/container.html.erb
+++ b/app/views/org_admin/templates/container.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1><%= template.id.present? ? template.title : _('New Template') %></h1>
-    <%= link_to _('View all templates'), referrer, class: 'btn btn-default pull-right' %>
+    <%= link_to _('View all templates'), referrer, class: 'btn btn-default float-end' %>
   </div>
 </div>
 <div class="row">
