--- a/app/views/layouts/modal_search/_selections.html.erb
+++ b/app/views/layouts/modal_search/_selections.html.erb
@@ -30,6 +30,6 @@ locals:
 <div class="col-md-12">
   <div class="col-md-12">
     <%= button_tag button_label, type: "button", class: "btn btn-default",
-                   data: { toggle: "modal", target: "#modal-search-#{namespace}" } %>
+                   'data-bs-toggle' => "modal", 'data-bs-target' => "#modal-search-#{namespace}" %>
   </div>
 </div>
