--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -15,6 +15,7 @@
 @use './dmpopidor/navs' as *;
 @use './dmpopidor/new_window_popup' as *;
 @use './dmpopidor/overlay' as *;
+@use './dmpopidor/select2' as *;
 @use './dmpopidor/tables' as *;
 
 @use './dmpopidor/footer' as *;
