--- a/app/views/branded/research_outputs/_list.html.erb
+++ b/app/views/branded/research_outputs/_list.html.erb
@@ -6,7 +6,7 @@
     <% research_output_description = research_output&.json_fragment&.research_output_description %>
     <% research_output_data = research_output_description.data if research_output_description.present?%>
     <% contact = research_output_description.contact%>
-    <%= form_for research_output, url: plan_research_output_path(:id => research_output.id, :plan_id => plan.id), html: {method: :put, remote: true, id: nil } do |f| %>
+    <%= form_for research_output, url: update_remote_research_outputs_path(:id => research_output.id, :plan_id => plan.id), html: {method: :patch, remote: true, id: nil } do |f| %>
       <div class='research-output-element <%= index != 0 ? '' : 'inactive' %>'>
         <%= hidden_field_tag 'research-output-id', research_output.id, class: 'research-output-id' %>
         <div class='research-output-fields'>
@@ -112,11 +112,11 @@
               <i class="fas fa-up-down-left-right handle" aria-hidden="true" data-toggle="tooltip" 
                       data-original-title="<%= _('Move research output') %>"></i>
                       
-              <%= link_to destroy_remote_research_outputs_url(plan, research_output), 
+              <%= link_to destroy_remote_research_outputs_url(plan_id: plan.id, id: research_output.id), 
                           target: "_self",
                           class: "fas fa-xmark delete",
                           data: {:confirm => _('Deleting this research output will remove the associated answers. Do you confirm ?')}, 
-                          :method => :delete  do %>
+                          :method => :delete do %>
                 <i aria-hidden="true" data-toggle="tooltip" 
                       data-original-title="<%= _('Delete research output') %>" %></i>
               <% end %>
